[package]
name = "rsomics-vcf-indv-stats"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Per-individual VCF statistics: TsTv-summary, singletons, depth (vcftools --TsTv-summary/--singletons/--depth)"
readme = "README.md"
repository = "https://github.com/omics-rust/rsomics-vcf-indv-stats"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-vcf-indv-stats"
path = "src/main.rs"

[lib]
name = "rsomics_vcf_indv_stats"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = "0.6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
